@@ -10,7 +10,14 @@ enum class MapLayer(val displayName: String, val javaScriptCode: String) {
     /** OpenStreetMap layer. */
     OPENSTREETMAP("OpenStreetMap", """
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+            attribution: '&copy; OpenStreetMap contributors',
+        })"""),
+
+    /** OpenStreetMap layer. */
+    OPEN_TOPO_MAP("OpenTopoMap", """
+        L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+        	maxZoom: 17,
+            attribution: 'Map data: &copy; OpenStreetMap contributors, SRTM | Map style: &copy; OpenTopoMap (CC-BY-SA)',
         })"""),
 
     /** OpenCycleMap layer. */
@@ -19,28 +26,15 @@ enum class MapLayer(val displayName: String, val javaScriptCode: String) {
             attribution: '&copy; OpenCycleMap, Map data &copy; OpenStreetMap contributors',
         })"""),
 
-    /** Hike & bike maps layer (HikeBikeMap.org). */
-    HIKE_BIKE_MAP("Hike & Bike Map", """
-        L.tileLayer('http://{s}.tiles.wmflabs.org/hikebike/{z}/{x}/{y}.png', {
-            attribution: '&copy; HikeBikeMap.org, Map data &copy; OpenStreetMap and contributors',
-        })"""),
-
     /** MTB map (mtbmap.cz). */
     MTB_MAP("MTB Map", """
-        L.tileLayer('http://tile.mtbmap.cz/mtbmap_tiles/{z}/{x}/{y}.png', {
-            attribution: '&copy; OpenStreetMap and USGS',
-        })"""),
-
-    /** MapBox layer in streets mode (consider: a project specific access token is required!). */
-    MAPBOX("MapBox", """
-        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-            id: 'mapbox.streets',
-            attribution: 'Map data &copy; OpenStreetMap contributors, Imagery &copy; Mapbox'
+        L.tileLayer('https://tile.mtbmap.cz/mtbmap_tiles/{z}/{x}/{y}.png', {
+	        attribution: '&copy; OpenStreetMap contributors &amp; USGS',
         })"""),
 
         /** Sattelite view (esri). */
     SATELITTE("Satellite Esri", """
-        L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+        L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
             attribution: '&copy; Esri, DigitalGlobe, GeoEye, i-cubed, USDA FSA, USGS, AEX, Getmapping, Aerogrid, IGN, IGP, swisstopo and the GIS User Community'
         })""")
 }
