@@ -1,17 +1,9 @@
 SportsTracker-TODO
 ==================
 
-JDK 21 + JavaFX 21 migration
-- Status:
-  - updated all dependencies
-  - updated Kotlin to 1.9.10 and fixed warnings
-  - switched compiler to Java 21 language mode
-- Update Leaflet.js, remove unsupported map types (Hike&Bike, MapBox)
-  - => update documentation and Changes
-- create branch for update, commit all changes
-- update Java in GitHub workflow to version 21 (when Temurin OpenJDK builds are available)
+- Test GitHub Actions build with Java v21 (when Temurin OpenJDK builds are available there)
 
-Remove all interfaces which are not really needed and don't provide advantages (e.g. STDocument etc.)
+- Remove all interfaces which are not really needed and don't provide advantages (e.g. STDocument etc.)
 
 LeafletMap:
 - version 1.9.4 contains a bug where the tiles are not rendered properly in JavaFX WebView browser
